--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
+/m3u8d-qt/m3u8d-qt.pro.user
+/cmd/downloading
+/cmd/m3u8d_cache.cdb
+/.idea
+/bin
