--- a/m3u8d-qt/version.rc
+++ b/m3u8d-qt/version.rc
@@ -7,8 +7,8 @@ IDI_ICON1 ICON "favicon.ico"
 #endif
 
 VS_VERSION_INFO VERSIONINFO
-    FILEVERSION 1,5,5,0
-    PRODUCTVERSION 1,5,5,0
+    FILEVERSION 1,5,6,0
+    PRODUCTVERSION 1,5,6,0
     FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
     FILEFLAGS VS_FF_DEBUG
@@ -23,10 +23,10 @@ VS_VERSION_INFO VERSIONINFO
         BEGIN
             BLOCK "080404b0"
             BEGIN
-                VALUE "ProductVersion", "1.5.5.0\0"
-                VALUE "ProductName", "m3u8视频下载工具\0"
+                VALUE "ProductVersion", "1.5.6.0\0"
+                VALUE "ProductName", "m3u8 downloader\0"
                 VALUE "LegalCopyright", "https://github.com/orestonce/m3u8d\0"
-                VALUE "FileDescription", "m3u8视频下载工具\0"
+                VALUE "FileDescription", "m3u8 downloader\0"
            END
         END
 
