--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
     
       - name: install qt static
-        uses: orestonce/install-qt-static@v0.3.0
+        uses: orestonce/install-qt-static@v0.4.0
         with:
           version: Qt5.6.3-Windows-x86-MinGW4.9.4-staticFull-20200104
           dir: qt_static_install
@@ -26,7 +26,7 @@ jobs:
         with:
           # The Go version to download (if necessary) and use. Supports semver spec and ranges.
           go-version: 1.18 # optional
-      - name: set env    
+      - name: build
         run: |
           go mod tidy
           go run export/main.go check-only
