--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -73,7 +73,7 @@ jobs:
         run: |
           go mod tidy
           go run export/main.go create-qt-lib arm64 c-shared
-          cd m3u8d-qt && qmake && make release && cd ..
+          cd m3u8d-qt && qmake && make && cd ..
           install_name_tool -change m3u8d-impl @executable_path/m3u8d-impl m3u8d-qt.app/Contents/MacOS/m3u8d-qt
           cp m3u8d-impl m3u8d-qt.app/Contents/MacOS/
           macdeployqt m3u8d-qt.app -dmg 
