--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -74,7 +74,7 @@ jobs:
           go mod tidy
           go run export/main.go create-qt-lib arm64 c-shared
           cd m3u8d-qt && qmake && make && cd ..
-          find . | grep -v qt_install | grep -v 
+          find . | grep -v qt_install 
           install_name_tool -change m3u8d-impl @executable_path/m3u8d-impl m3u8d-qt.app/Contents/MacOS/m3u8d-qt
           cp m3u8d-impl m3u8d-qt.app/Contents/MacOS/
           macdeployqt m3u8d-qt.app -dmg 
