--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -101,7 +101,11 @@ jobs:
           pwd
           cd m3u8d-qt
           pwd
+          find
           export QMAKE_XCODE_DEVELOPER_PATH="/Applications/Xcode.app/Contents/Developer"
+          xcode-select --install
+          echo $QMAKE_XCODE_DEVELOPER_PATH
+          find /Applications/Xcode.app/Contents/Developer
           qmake -project
           make
           pwd
