--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -100,6 +100,7 @@ jobs:
           go run export/main.go create-qt-lib amd64 c-shared
           pwd
           cd m3u8d-qt
+          rm -f m3u8d-qt.pro.user
           pwd
           find
           export QMAKE_XCODE_DEVELOPER_PATH="/Applications/Xcode.app/Contents/Developer"
