--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -80,7 +80,7 @@ jobs:
           ls -alh m3u8d-qt.dmg
           file m3u8d-qt.dmg m3u8d-impl m3u8d-qt.app/Contents/MacOS/m3u8d-qt
           cd ./m3u8d-qt.app
-          ./m3u8d-qt.app/Contents/MacOS/m3u8d-qt
+          ./Contents/MacOS/m3u8d-qt
   build-macos-amd64:
     runs-on: macos-13
     steps:
@@ -107,4 +107,4 @@ jobs:
           macdeployqt m3u8d-qt.app -dmg 
           file m3u8d-qt.dmg m3u8d-impl m3u8d-qt.app/Contents/MacOS/m3u8d-qt
           cd ./m3u8d-qt.app
-          ./m3u8d-qt.app/Contents/MacOS/m3u8d-qt
+          ./Contents/MacOS/m3u8d-qt
