--- a/.github/workflows/release-build-upload.yml
+++ b/.github/workflows/release-build-upload.yml
@@ -3,7 +3,9 @@
 name: release-build-upload
 
 # Controls when the workflow will run
-on: push
+on: 
+  release:
+    types: [ created ]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
