--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -3,7 +3,10 @@
 name: push-build-check
 
 # Controls when the workflow will run
-on: push
+on:
+  push:
+    exclude:
+      tags: true
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
