--- a/.github/workflows/push-build-check.yml
+++ b/.github/workflows/push-build-check.yml
@@ -5,8 +5,8 @@ name: push-build-check
 # Controls when the workflow will run
 on:
   push:
-    exclude:
-      tags: true
+    tags-ignore:
+      - v**
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
