--- a/.github/workflows/release-build-upload.yml
+++ b/.github/workflows/release-build-upload.yml
@@ -60,6 +60,12 @@ jobs:
           name: m3u8d_cli_linux_x86-${{ github.ref_name }}
           path: bin/m3u8d_cli_linux_386
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload release linux_x64_cli
+        uses: Guerra24/upload-to-release@v1
+        with:
+          name: m3u8d_cli_linux_x64-${{ github.ref_name }}
+          path: bin/m3u8d_cli_linux_amd64
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: upload release linux_arm_cli
         uses: Guerra24/upload-to-release@v1
         with:
